"distrib2 all hints done"

--- a/prob1_2025/distrib2.html
+++ b/prob1_2025/distrib2.html
@@ -1278,6 +1278,13 @@ $$
 \frac{\lambda^k}{k!} \left(1-\frac kn \right)^k\left(1-\frac \lambda n\right)^{n-k}, 
 $$
 where $\lambda = np.$
+<p><a
+href="javascript:hideShow('lab30')"><b>[Hint]</b></a><div
+class="ans" id="lab30">
+The first inequality follows from $n(n-1)\cdots(n-k+1) \geq n^k$.
+<p></p>
+The second follows from $n(n-1)\cdots (n-k+1) \leq (n-k)^k$. 
+</div></p>
 <hr>
 </p>
 ::<p>
@@ -1289,6 +1296,13 @@ $$
 &gt;
 \frac{e^{-\lambda}\lambda^k}{k!} e^{-k^2/(n-k)-\lambda^2/(n-\lambda)}.
 $$
+<p><a
+href="javascript:hideShow('lab31')"><b>[Hint]</b></a><div
+class="ans" id="lab31">For the first inequality use the fact that $\log(1+x) &lt; x$  for $|x| &lt; 1$.
+<p></p>
+For the second use the fact that $\log(1+x) &gt; x-\frac{x^2}{2}$  for $|x| &lt; 1$.
+</div></p>
+
 <hr>
 </p>
 ::<p>
@@ -1305,8 +1319,8 @@ the other box? [Hint: To get yourself started first
 find $P(X=n).$ This means he has been using the same
 box $n$ times without ever using the other box.]
 <p><a
-href="javascript:hideShow('lab30')"><b>[Hint]</b></a><div
-class="ans" id="lab30">
+href="javascript:hideShow('lab32')"><b>[Hint]</b></a><div
+class="ans" id="lab32">
 Let's work out $P(X=3)$  when $n=5$. This means he has already used up 7 matches (5 matches from the
  current pocket and 5-3=2 matches from the other). So this must be his 8th search. Each of these
  8th searches was either in his left (L) or right (R) pocket. So there are $2^8$  ways in all. 
@@ -1320,19 +1334,28 @@ Hence $P(X=3) = \frac{2\binom75}{2^8}$.
 <hr>
 
 </p>
-::::<p>
-<b>EXERCISE 33:</b>&nbsp;(Medium) <font size="-2">[dtwo13.png]</font><img width="" src="image/dtwo13.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 33:</b>&nbsp;(Medium) <font size="-2">[dtwo13.png]</font><img width="" src="image/dtwo13.png" style="vertical-align:text-top;">
+<p><a
+href="javascript:hideShow('lab33')"><b>[Hint]</b></a><div
+class="ans" id="lab33">
+$$
+\frac{P(X=i)}{P(X=i-1)}  =  \frac{\lambda}{i} \lesseqgtr 1
+$$
+according as $\lambda \lesseqgtr i$. 
+</div></p>
+</p>
 ::<p>
 <b>EXERCISE 34:</b>&nbsp;(Easy)<font size="-2">[dtwo14.png]</font><img width="" src="image/dtwo14.png" style="vertical-align:text-top;"></p>
-::::<p>
+::<p>
 <b>EXERCISE 35:</b>&nbsp;(Easy)<font size="-2">[dtwo15.png]</font><img width="" src="image/dtwo15.png" style="vertical-align:text-top;"></p>
 
 <p></p>
 ::<p>
 <b>EXERCISE 36:</b>&nbsp;(Easy)Find the distribution of $X$  where <font size="-2">[dtwo17.png]</font><img width="" src="image/dtwo17.png" style="vertical-align:text-top;">
 <p><a
-href="javascript:hideShow('lab31')"><b>[Hint]</b></a><div
-class="ans" id="lab31">
+href="javascript:hideShow('lab34')"><b>[Hint]</b></a><div
+class="ans" id="lab34">
 Let $X_i$  be indicator for there being a changeover at position $i$  for $i=2,...,n.$  By definition, there
  cannot be a changeover at $i=1.$  
 <p></p>
@@ -1344,9 +1367,45 @@ So $E(X_i) = \cdots.$
 
 </p>
 ::<p>
-<b>EXERCISE 37:</b>&nbsp;(Easy)<font size="-2">[dtwo37.png]</font><img width="" src="image/dtwo37.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 37:</b>&nbsp;(Easy)<font size="-2">[dtwo37.png]</font><img width="" src="image/dtwo37.png" style="vertical-align:text-top;">
+<p><a
+href="javascript:hideShow('lab35')"><b>[Hint]</b></a><div
+class="ans" id="lab35">
+$$\begin{eqnarray*}
+P(Y=y|X+Y=z) 
+&amp; = &amp; \frac{P(Y=y \cap X+Y = z)}{P(X+Y=z)}\\
+&amp; = &amp; \frac{P(Y=y \cap X = z-y)}{P(X+Y=z)}\\
+&amp; = &amp; \frac{P(Y=y)P(X = z-y)}{P(X+Y=z)}~~\left[\mbox{$\because X, Y$  indep}\right]\\
+&amp; = &amp; \frac{e^{-\lambda_2} \lambda_2^y}{y!}\times \frac{e^{-\lambda_1}
+ \lambda_1^{z-y}}{(z-y)!} \times \frac{z!}{e^{-\lambda_1-\lambda_2}
+ (\lambda_1+\lambda_2)^z}~~\left[\mbox{$\because X+Y\sim Poi(\lambda_1+\lambda_2)$}\right]\\
+&amp; = &amp; \binom z y p^y (1-p)^{z-y},
+\end{eqnarray*}$$
+where $p = \frac{\lambda_2}{\lambda_1+\lambda_2}$.
+</div></p>
+
+</p>
 ::<p>
-<b>EXERCISE 38:</b>&nbsp;(Easy)<font size="-2">[dtwo38.png]</font><img width="" src="image/dtwo38.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 38:</b>&nbsp;(Easy)<font size="-2">[dtwo38.png]</font><img width="" src="image/dtwo38.png" style="vertical-align:text-top;">
+<p><a
+href="javascript:hideShow('lab36')"><b>[Hint]</b></a><div
+class="ans" id="lab36">
+$$\begin{eqnarray*}
+&amp; &amp; P(X=x,\,Y=y,\,Z=z|X+Y+Z=x+y+z) \\
+&amp; = &amp; \frac{P(X=x,\,Y=y,\,Z=z,\,X+Y+Z=x+y+z) }{P(X+Y+Z=x+y+z)}\\
+&amp; = &amp; \frac{P(X=x,\,Y=y,\,Z=z)}{P(X+Y+Z=x+y+z)}\\
+&amp; = &amp; \frac{P(X=x)P(Y=y)P(Z=z)}{P(X+Y+Z=x+y+z)}~~\left[\mbox{$\because X, Y, Z$  indep}\right]\\
+&amp; = &amp; \frac{e^{-\lambda_1} \lambda_1^x}{x!} \times 
+\frac{e^{-\lambda_2} \lambda_2^y}{y!} \times
+\frac{e^{-\lambda_3} \lambda_3^z}{z!} \times
+\frac{(x+y+z)!}{e^{-\lambda_1-\lambda_2-\lambda_3} (\lambda_1+\lambda_2+\lambda_3)^{x+y+z}}
+ ~~\left[\mbox{$\because X+ Y+ Z\sim Poi(\lambda_1+\lambda_2+\lambda_3)$}\right]\\
+&amp; = &amp; \frac{(x+y+z)!}{x!y!z!} p_1^x p_2^y p_3^z,
+\end{eqnarray*}$$
+where $p_i = \frac{\lambda_i}{\lambda_1+\lambda_2+\lambda3}$.
+</div></p>
+
+</p>
 
 <p></p>
 <hr xmlns="http://www.w3.org/1999/xhtml"/>
