--- a/prob1_2025/distrib1.html
+++ b/prob1_2025/distrib1.html
@@ -1245,17 +1245,68 @@ name="Problems for practice">Problems for practice</a></h1>
 
 <p></p>
 ::<p>
-<b>EXERCISE 14:</b>&nbsp;(Easy)<font size="-2">[dtwo1.png]</font><img width="" src="image/dtwo1.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 14:</b>&nbsp;(Easy)<font size="-2">[dtwo1.png]</font><img width="" src="image/dtwo1.png" style="vertical-align:text-top;"><p><a
+href="javascript:hideShow('lab14')"><b>[Hint]</b></a><div
+class="ans" id="lab14">
+$\frac{P(X=i)}{P(X=i-1)} = \frac{7-i}{i}$  for $i=1,...,6$. This is $\gtreqless 1$  according as 
+$3 \gtreqless i$.</div></p>
+</p>
 ::<p>
-<b>EXERCISE 15:</b>&nbsp;(Medium)<font size="-2">[dtwo2.png]</font><img width="" src="image/dtwo2.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 15:</b>&nbsp;(Medium)<font size="-2">[dtwo2.png]</font><img width="" src="image/dtwo2.png" style="vertical-align:text-top;"><p><a
+href="javascript:hideShow('lab15')"><b>[Hint]</b></a><div
+class="ans" id="lab15">
+See the hint of the last problem.
+</div></p>
+</p>
 ::<p>
-<b>EXERCISE 16:</b>&nbsp;(Medium)<font size="-2">[dtwo3.png]</font><img width="" src="image/dtwo3.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 16:</b>&nbsp;(Medium)<font size="-2">[dtwo3.png]</font><img width="" src="image/dtwo3.png" style="vertical-align:text-top;"><p><a
+href="javascript:hideShow('lab16')"><b>[Hint]</b></a><div
+class="ans" id="lab16">
+Model the situation as follows. Each passenger independently flips a coin with $P(head) = 0.95$. If tail, they cancel
+ their booking.  
+<p></p>
+Let $X = $  number of passengers showing up. 
+<p></p>
+Then $X\sim Binom(52, 0.(5)$. We want to find $P(X\leq 50) = 1-P(X=51)-P(X=52) = \cdots$.
+</div></p>
+</p>
 ::<p>
-<b>EXERCISE 17:</b>&nbsp;(Medium)<font size="-2">[dtwo4.png]</font><img width="" src="image/dtwo4.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 17:</b>&nbsp;(Medium)<font size="-2">[dtwo4.png]</font><img width="" src="image/dtwo4.png" style="vertical-align:text-top;"><p><a
+href="javascript:hideShow('lab17')"><b>[Hint]</b></a><div
+class="ans" id="lab17">
+The number of ways to write a string of $x_1$  first outcomes, $x_2$  second outcomes and so on, is 
+$$\frac{n!}{x_1!\cdots x_r!}$$.
+Each such outcome has probability $p_1^{x_1}\cdots p_r^{x_r}$.
+</div></p>
+</p>
 ::<p>
-<b>EXERCISE 18:</b>&nbsp;(Medium)<font size="-2">[dtwo5.png]</font><img width="" src="image/dtwo5.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 18:</b>&nbsp;(Medium)<font size="-2">[dtwo5.png]</font><img width="" src="image/dtwo5.png" style="vertical-align:text-top;">
+<p></p>
+Here $1\leq k &lt; r$. <p><a
+href="javascript:hideShow('lab18')"><b>[Hint]</b></a><div
+class="ans" id="lab18">
+Consider the event $A$  defined as {one of the first $k$  outcomes has occured}. 
+<p></p>
+Then $X_1+\cdots+X_k = $  number of times $A$  has occured out of $n$  trials. Also $P(A)= p_1+\cdots+p_r$.
+<p></p>
+Hence $X_1+\cdots+X_k \sim Binom(n,p_1+\cdots+p_r)$.
+<p></p>
+Now you can write down the required PMF esily. 
+</div></p>
+
+</p>
 ::<p>
-<b>EXERCISE 19:</b>&nbsp;(Medium)<font size="-2">[dtwo6.png]</font><img width="" src="image/dtwo6.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 19:</b>&nbsp;(Medium)<font size="-2">[dtwo6.png]</font><img width="" src="image/dtwo6.png" style="vertical-align:text-top;"><p><a
+href="javascript:hideShow('lab19')"><b>[Hint]</b></a><div
+class="ans" id="lab19">
+Model the situation as follows. Each customer rolls a 3 faced die. The three faces are "Ordinary", "Colour" and "Browse". The probabilities
+ are $0.5, 0.3, 0.2$, respectively.  The rolls are independent. 
+<p></p>
+Let $X_1, X_2, X_3$  be the numbers of customers (out of 5) in each category. 
+<p></p>
+So the required probability is $\frac{5!}{1!2!2!} (0.5)^1(0.2)^2(0.3)^2$.
+</div></p>
+</p>
 ::<p>
 <b>EXERCISE 20:</b>&nbsp;(Medium)<font size="-2">[dtwo7.png]</font><img width="" src="image/dtwo7.png" style="vertical-align:text-top;"></p>
 ::<p>
@@ -1263,8 +1314,8 @@ name="Problems for practice">Problems for practice</a></h1>
 ::<p>
 <b>EXERCISE 22:</b>&nbsp;(Hard)<font size="-2">[dtwo9.png]</font><img width="" src="image/dtwo9.png" style="vertical-align:text-top;">
 <p><a
-href="javascript:hideShow('lab14')"><b>[Hint]</b></a><div
-class="ans" id="lab14"><b>First part:</b> Let us start by considering one possible sequence of results that will require exactly 7 games: AAABBBB.
+href="javascript:hideShow('lab20')"><b>[Hint]</b></a><div
+class="ans" id="lab20"><b>First part:</b> Let us start by considering one possible sequence of results that will require exactly 7 games: AAABBBB.
  But BBBBAAA is not possible, because here the decision is already clear after the fourth game. So we need a sequence of
  length 7 such that there are exactly 4 of the last symbol. Each such sequence must have exactly 3 of the other symbol. Each
  such sequence ending with A has probability $p^4(1-p)^3$  while each such sequence ending with B has probability $p^3(1-p)^4$.
