"distrib1 more hints"

--- a/prob1_2025/distrib1.html
+++ b/prob1_2025/distrib1.html
@@ -1310,12 +1310,18 @@ So the required probability is $\frac{5!}{1!2!2!} (0.5)^1(0.2)^2(0.3)^2$.
 ::<p>
 <b>EXERCISE 20:</b>&nbsp;(Medium)<font size="-2">[dtwo7.png]</font><img width="" src="image/dtwo7.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 21:</b>&nbsp;(Medium)<font size="-2">[dtwo8.png]</font><img width="" src="image/dtwo8.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 21:</b>&nbsp;(Medium)<font size="-2">[dtwo8.png]</font><img width="" src="image/dtwo8.png" style="vertical-align:text-top;"><p><a
+href="javascript:hideShow('lab20')"><b>[Hint]</b></a><div
+class="ans" id="lab20">
+Toss a coin with $P(head)=p$  independently until you get $r$  heads. Let $X$  be the number of tails obtained.
+<p></p>
+</div></p>
+</p>
 ::<p>
 <b>EXERCISE 22:</b>&nbsp;(Hard)<font size="-2">[dtwo9.png]</font><img width="" src="image/dtwo9.png" style="vertical-align:text-top;">
 <p><a
-href="javascript:hideShow('lab20')"><b>[Hint]</b></a><div
-class="ans" id="lab20"><b>First part:</b> Let us start by considering one possible sequence of results that will require exactly 7 games: AAABBBB.
+href="javascript:hideShow('lab21')"><b>[Hint]</b></a><div
+class="ans" id="lab21"><b>First part:</b> Let us start by considering one possible sequence of results that will require exactly 7 games: AAABBBB.
  But BBBBAAA is not possible, because here the decision is already clear after the fourth game. So we need a sequence of
  length 7 such that there are exactly 4 of the last symbol. Each such sequence must have exactly 3 of the other symbol. Each
  such sequence ending with A has probability $p^4(1-p)^3$  while each such sequence ending with B has probability $p^3(1-p)^4$.
@@ -1330,9 +1336,34 @@ All that remains is to count how many sequences of these two types there are. It
 
 </p>
 ::<p>
-<b>EXERCISE 23:</b>&nbsp;(Medium)<font size="-2">[dtwo10.png]</font><img width="" src="image/dtwo10.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 23:</b>&nbsp;(Medium)<font size="-2">[dtwo10.png]</font><img width="" src="image/dtwo10.png" style="vertical-align:text-top;"><p><a
+href="javascript:hideShow('lab23')"><b>[Hint]</b></a><div
+class="ans" id="lab23">
+Let $X,Y$  be, respectively, the number of heads obtained by $A,B$. Then $X\sim Binom(k,0.5)$  and $Y\sim Binom(n-k,0.5)$.
+ Also they are independent. Also $X+Y\sim Binom(n,0.5)$.
+<p></p>
+$$\begin{eqnarray*}
+P(X = Y) 
+&amp; = &amp; \sum_{i=0}^k P(X=i,\, Y=i)\\
+&amp; = &amp; \sum_{i=0}^k P(X=i)P(Y=i)~~\left[\mbox{$\because X,Y$  independent}\right]\\
+&amp; = &amp; 2^{-n}\sum_{i=0}^k \binom k i \binom {n-k} i~~\left[\mbox{$\because X,Y$  independent}\right]\\
+\end{eqnarray*}$$ 
+Also $P(X+Y=k) = \binom n k 2^{-n}$.
+<p></p>
+So we need to show $\sum_{i=0}^k \binom k i \binom {n-k} i = \binom n k$.
+<p></p>
+Now $\sum_{i=0}^k \binom k i \binom {n-k} i = \sum_{i=0}^k \binom k {k-i} \binom {n-k} i = \binom {k+(n-k)} {(k-i)+i} =\binom n k$.
+</div></p>
+</p>
 ::<p>
-<b>EXERCISE 24:</b>&nbsp;(Hard)<font size="-2">[dtwo11.png]</font><img width="" src="image/dtwo11.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 24:</b>&nbsp;(Hard)<font size="-2">[dtwo11.png]</font><img width="" src="image/dtwo11.png" style="vertical-align:text-top;"><p><a
+href="javascript:hideShow('lab24')"><b>[Hint]</b></a><div
+class="ans" id="lab24">
+(b) Let $A = \{\underbrace{TT...T}_kH~:~k\in{\mathbb N}\}$  and $B =
+ \{\underbrace{HH...H}_kT~:~k\in{\mathbb N}\}$. Then we need to check if $P(A) = P(B)$. But
+ $P(A) = p(1-p)\times\frac{1}{1-p} = p$  and $P(B) = p(1-p)\times\frac 1p = 1-p$. 
+</div></p>
+</p>
 ::<p>
 <b>EXERCISE 25:</b>&nbsp;(Hard)<font size="-2">[dtwo12.png]</font><img width="" src="image/dtwo12.png" style="vertical-align:text-top;"></p>
 ::<p>
@@ -1368,7 +1399,10 @@ men who get their own hats. Find $E(X)$ and $V(X).$</p>
 ::<p>
 <b>EXERCISE 40:</b>&nbsp;<font size="-2">[dtwo31.png]</font><img width="" src="image/dtwo31.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 41:</b>&nbsp;<font size="-2">[dtwo32.png]</font><img width="" src="image/dtwo32.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 41:</b>&nbsp;<font size="-2">[dtwo32.png]</font><img width="" src="image/dtwo32.png" style="vertical-align:text-top;">
+<p></p>
+Here Exercise 16 refers to the last problem. 
+</p>
 ::<p>
 <b>EXERCISE 42:</b>&nbsp;<font size="-2">[dtwo33.png]</font><img width="" src="image/dtwo33.png" style="vertical-align:text-top;"></p>
 ::<p>
