"distrib1 copypaste arshia"

--- a/prob1_2025/distrib2.html
+++ b/prob1_2025/distrib2.html
@@ -1352,18 +1352,11 @@ according as $\lambda \lesseqgtr i$.
 
 <p></p>
 ::<p>
-<b>EXERCISE 36:</b>&nbsp;(Easy)Find the distribution of $X$  where <font size="-2">[dtwo17.png]</font><img width="" src="image/dtwo17.png" style="vertical-align:text-top;">
+<b>EXERCISE 36:</b>&nbsp;(Easy)Find the distribution of $X=\sum_{i=1}^n$
+where $X_1,...,X_n$ are IID Geometric random variables.
 <p><a
 href="javascript:hideShow('lab34')"><b>[Hint]</b></a><div
-class="ans" id="lab34">
-Let $X_i$  be indicator for there being a changeover at position $i$  for $i=2,...,n.$  By definition, there
- cannot be a changeover at $i=1.$  
-<p></p>
-Then the answer is $\sum_2^n E(X_i). $  Now $X_i = 1$  iff the $(i-1)$-th and
- $i$-th tosses result in either $HT$  or $TH.$  
-<p></p>
-So $E(X_i) = \cdots.$
-</div></p>
+class="ans" id="lab34">If $X_i\sim Geom(p),$ then $X\sim NegBin(n,p).$</div></p> 
 
 </p>
 ::<p>
