--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,5 +1,10 @@
 <html><body>
 <dl>
+<dt><strong>November 02, 2025:</strong></dt>
+<dd><ul>
+<li>Corrected a copy-paste error in the finite and infinite supports pages. Thanks to Arshia for pointing out the error.</li>
+</ul>
+</dd>
 <dt><strong>October 31, 2025:</strong></dt>
 <dd><ul>
 <li>More hints added.</li>
@@ -57,11 +62,11 @@
 <li><p>Added video links to the <a href="fluc.html" target="naya">Random walk</a> page.</p></li>
 </ul>
 </dd>
-</dl>
-<p><strong>October 13, 2025:</strong></p>
-<pre><code>- Corrected hint to Exercise 9 in the 
-[Conditional distribution](condl.html){target=&quot;naya&quot;} page.</code></pre>
-<dl>
+<dt><strong>October 13, 2025:</strong></dt>
+<dd><ul>
+<li>Corrected hint to Exercise 9 in the <a href="condl.html" target="naya">Conditional distribution</a> page.</li>
+</ul>
+</dd>
 <dt><strong>October 12, 2025:</strong></dt>
 <dd><ul>
 <li>Added a detailed hint to Exercise 7 (the most important result) in the <a href="pgf.html" target="naya">PGF</a> page.</li>
