--- a/prob1_2025/distrib2.html
+++ b/prob1_2025/distrib2.html
@@ -535,9 +535,11 @@ href="javascript:hideShow('lab7')"><b>[Hint]</b></a><div
 class="ans" id="lab7">
 $P(X\geq x+a | X\geq x) = \frac{P(X\geq x+a \&amp; X\geq x)}{P( X\geq x)} = \frac{P(X\geq x+a)}{P( X\geq x)}$
 <p></p>
-Now $P(X\geq x) = \sum_{i\geq x}p^{i-1}p = (1-p)^{x-1}$  (check!). 
+Now $P(X\geq x) = \sum_{i\geq x}(1-p)^{i-1}p = (1-p)^{x-1}$  (check!). 
 <p></p>
-Hence $\frac{P(X\geq x+1)}{P( X\geq x)} = (1-p)^a,$  free of $x.$
+Hence $\frac{P(X\geq x+a)}{P( X\geq x)} = (1-p)^a,$  free of $x.$
+<p></p>
+[Thanks to Anant for correcting some typos here.]
 </div></p>
 
 </p>
@@ -612,13 +614,13 @@ $$
 If $X$ follows <b>NegBin</b>$(3,\frac14)$ distribution, find the following
 probabilities.
 <ol>
-<li>$P(T=5)$
+<li>$P(X=5)$
 </li>
-<li>$P(T=2)$
+<li>$P(X=2)$
 </li>
-<li>$P(T=3)$
+<li>$P(X=3)$
 </li>
-<li>$P(T\leq5)$
+<li>$P(X\leq5)$
 </li>
 </ol>
 
@@ -629,11 +631,13 @@ class="ans" id="lab8"><ol>
 </li>
 <li>$0$
 </li>
-<li>$\frac3{32}$
+<li>$\frac{1}{64}$
 </li>
-<li>$\frac9{128}$
+<li>$\frac{53}{512}$
 </li>
-</ol></div></p>
+</ol>
+[Thanks to Anant for correcting a couple of typos here.]
+</div></p>
 
 </p>
 
@@ -663,19 +667,19 @@ $Var(Y)$ for the following values of $r$ and $\theta.$
 <p><a
 href="javascript:hideShow('lab9')"><b>[Hint]</b></a><div
 class="ans" id="lab9"><ol>
-<li>$6,r=3, \theta=\frac12$
+<li>$E(Y)=6$, $V(Y)=6$.
 </li>
-<li>$10, 40 r=2.$
+<li>$E(Y)=10$, $V(Y)=40$.
 </li>
-<li>$\frac32,\frac34.$
+<li>$E(Y)=\frac32$, $V(Y)=\frac34.$
 </li>
-<li>$15, 30.$
+<li>$E(Y)=15$, $V(Y)=30.$
 </li>
-</ol></div></p>
+</ol>
+[Thanks to Anant for pointing out typos here.]
+</div></p>
 
 </p>
-
-<p></p>
 It should be apparent from the description of the distribution that
 Negative Binomial distribution is related with the Geometric
 distribution. In Geometric distribution we keep on tossing until we get the
