--- a/prob1_2025/condl.html
+++ b/prob1_2025/condl.html
@@ -775,7 +775,7 @@ class="ans" id="lab17">(a) $\mu=\sum P_i$.
 to $\sum P_i=\mu$ being fixed. Cauchy-Schwarz might help.  
 <p></p>
 (c) Here we have to maximise $\sum P_i^2$  subject to $\sum P_i=\mu.$  First notice that
- in any maximising $(P_1,...,P_n)$  al but at most one $P_i$  must be either $0$ 
+ in any maximising $(P_1,...,P_n)$  all but at most one $P_i$  must be either $0$ 
  or $1$. Because if  $P_i,P_j\in(0,1)$  for $i\neq j$, then take the smaller one
  closer to zero and the larger one closer to 1 by the same amount. Then $\sum P_i$  remains unaltered, but $\sum P_i^2$ 
  increases. 
@@ -1131,8 +1131,27 @@ $$\sum_{j=0}^{i-1} \binom{i+j-1}{j}$$
 ways. Here $j$  denotes the number of B's in the red part. Once we also count the matching number
  of blue parts for each value of $j$, we get the size of $\{X_i=1\}$  as
 $$\sum_{j=0}^{i-1} \binom{i+j-1}{j}\binom{2n-i-j}{n-j}.$$
-Now you should be able to complete the rest.     
+Quite mysteriously (to me), this is free of $i$  and indeed equals $\frac 12\binom{2n}{n}$. 
 <p></p>
+[Thanks to Souradip for observing this.] 
+<p></p>
+So we see that $P(X_i=1) = \frac 12$. In other words, all the $X_i$'s are actually
+ identically distributed. (There must be a direct intuitive proof of this, but it beats me!). 
+<p></p>
+So the final answer is just $\frac n2$. 
+<p></p>
+[Souradip found this identity from the web which immediately leads to the mysterious result:
+<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/soura.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+But I do not know an intuitive proof of this identity either!]
 </div></p>
 
 <hr>
