--- a/prob1_2025/distrib1.html
+++ b/prob1_2025/distrib1.html
@@ -1368,6 +1368,16 @@ class="ans" id="lab24">
 <b>EXERCISE 25:</b>&nbsp;(Medium)<font size="-2">[dtwo12.png]</font><img width="" src="image/dtwo12.png" style="vertical-align:text-top;"><p><a
 href="javascript:hideShow('lab25')"><b>[Hint]</b></a><div
 class="ans" id="lab25">
+Here $k$  changeovers mean there are $k+1$  "runs" of identical outcomes. Each possible sequence has the same probability
+ $2^{-n}$. So enough to count the number of ways to split $n$  into $k+1$  positive parts. 
+</div></p>
+
+</p>
+::<p>
+<b>EXERCISE 26:</b>&nbsp;(Medium)<font size="-2">[dtwo16.png]</font><img width="" src="image/dtwo16.png" style="vertical-align:text-top;">
+<p><a
+href="javascript:hideShow('lab26')"><b>[Hint]</b></a><div
+class="ans" id="lab26">
 Let $X_i$  be indicator for there being a changeover at position $i$  for $i=2,...,n.$  By definition, there
  cannot be a changeover at $i=1.$  
 <p></p>
@@ -1376,13 +1386,6 @@ Then the answer is $\sum_2^n E(X_i). $  Now $X_i = 1$  iff the $(i-1)$-th and
 <p></p>
 So $E(X_i) = \cdots.$
 </div></p>
-
-</p>
-::<p>
-<b>EXERCISE 26:</b>&nbsp;(Medium)<font size="-2">[dtwo16.png]</font><img width="" src="image/dtwo16.png" style="vertical-align:text-top;">
-<p><a
-href="javascript:hideShow('lab26')"><b>[Hint]</b></a><div
-class="ans" id="lab26">Already given in the hint above.</div></p>
 
 </p>
 ::<p>
