--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,5 +1,10 @@
 <html><body>
 <dl>
+<dt><strong>November 08, 2025:</strong></dt>
+<dd><ul>
+<li>Updated the hints to Exercises 25 and 26 in the <a href="distrib1.html" target="naya">Distributions with finite supports</a> page. Thanks to Mayukh for pointing out the need.</li>
+</ul>
+</dd>
 <dt><strong>November 07, 2025:</strong></dt>
 <dd><ul>
 <li>Added Souradip’s mysterious simplification of the solution to Exercise 35 in the <a href="condl.html" target="naya">Conditional distribution</a> page.</li>
