--- a/prob1_2025/distrib2.html
+++ b/prob1_2025/distrib2.html
@@ -1213,11 +1213,15 @@ The required probability is $P(Y\geq 1) = 1-P(Y=0) = 1-(1-p)^n$.
 <b>EXERCISE 25:</b>&nbsp;(Medium)<font size="-2">[infdist10.png]</font><img width="" src="image/infdist10.png" style="vertical-align:text-top;"><p><a
 href="javascript:hideShow('lab25')"><b>[Hint]</b></a><div
 class="ans" id="lab25">
-Think of the problem like this. The pedestrian arrives, and starts tossing a coin with $P(head)=0$  once every second.
- If the outcome is a head, he waits for that second, and tosses the coin again the next second. If it is tail, (s)he crosses.
+Think of the problem like this: The god of traffic is tossing a coin with $P(H)=p$ 
+ repeatedly (and independently), resulting in a sequence of H's and T's. The pedestrian can view the sequence at least 3
+ steps into the future. Thus, initially he knows at least first three outcomes, then in the next second he knows at least
+ the first four outcomes, and so on. He would cross if an only if the next 3 outcomes are all tails. 
 <p></p>
-With this formulation waiting for 0 second is like having a tail in the first toss. Waiting for
- exactly 1 second is like having head, tail.  
+With this formulation waiting for 0 second is having TTT.  Waiting for
+ exactly 1 second is having  HTTT, and so on. Waiting for 2 seconds correspond to {HHTTT, THTTT} but not to HTTTT. 
+<p></p>
+[Thanks to Souradip for pointing out a mistake here.]
 <p></p>
 </div></p>
 <hr>
