--- a/prob1_2025/distrib1.html
+++ b/prob1_2025/distrib1.html
@@ -1397,7 +1397,16 @@ So $E(X_i) = \cdots.$
 ::<p>
 <b>EXERCISE 30:</b>&nbsp;<font size="-2">[dtwo21.png]</font><img width="" src="image/dtwo21.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 31:</b>&nbsp;<font size="-2">[dtwo22.png]</font><img width="" src="image/dtwo22.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 31:</b>&nbsp;<font size="-2">[dtwo22.png]</font><img width="" src="image/dtwo22.png" style="vertical-align:text-top;"><p><a
+href="javascript:hideShow('lab27')"><b>[Hint]</b></a><div
+class="ans" id="lab27">
+Let $X_i=\left\{\begin{array}{ll}1&\text{if }$i$-th coupon was not seen before\\ 0&\text{otherwise.}\end{array}\right.. $
+<p></p>
+Let $X = \sum_1^k X_i$. To find $E(X_i)$  and $V(X_i)$. 
+<p></p>
+Clearly, $X_1\equiv 1$. Now find $E(X_i)$  and $E(X_iX_j)$  for $i]\neq j$.
+</div></p>
+</p>
 ::<p>
 <b>EXERCISE 32:</b>&nbsp;<font size="-2">[dtwo23.png]</font><img width="" src="image/dtwo23.png" style="vertical-align:text-top;"></p>
 ::<p>
