--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,5 +1,10 @@
 <html><body>
 <dl>
+<dt><strong>November 09, 2025:</strong></dt>
+<dd><ul>
+<li>Added hint to Exercise 31 in the <a href="distrib1.html" target="naya">Distributions with finite supports</a> page.</li>
+</ul>
+</dd>
 <dt><strong>November 08, 2025:</strong></dt>
 <dd><ul>
 <li><p>Updated the hints to Exercise 25 in the <a href="distrib2.html" target="naya">Distributions with infinite supports</a> page. Thanks to Souradip for pointing out the need.</p></li>
