--- a/prob1_2025/distrib1.html
+++ b/prob1_2025/distrib1.html
@@ -1197,10 +1197,12 @@ P(X_1=x_1|X_1+X_2=k)
 &amp; = &amp; \frac{P(X_1=x_1~\&amp;~X_1+X_2=k)}{P(X_1+X_2=k)}\\
 &amp; = &amp; \frac{P(X_1=x_1~\&amp;~X_2=k-x_1)}{P(X_1+X_2=k)}\\
 &amp; = &amp; \frac{P(X_1=x_1)P(X_2=k-x_1)}{P(X_1+X_2=k)}\\
-&amp; = &amp; \frac{\binom{n_1}{x_1}p^{x_1}(1-p)^{n_1-x_1}\binom{n_2}{k-x_1}p^{k-x_1}(1-p)^{x_1}}{\binom{n_1+n_2}{k}p^k(1-p)^{n_1+n_2-k}}\\
+&amp; = &amp; \frac{\binom{n_1}{x_1}p^{x_1}(1-p)^{n_1-x_1}\binom{n_2}{k-x_1}p^{k-x_1}(1-p)^{n_2-k+x_1}}{\binom{n_1+n_2}{k}p^k(1-p)^{n_1+n_2-k}}\\
 &amp; = &amp; \frac{\binom{n_1}{x_1}\binom{n_2}{k-x_1}}{\binom{n_1+n_2}{k}},
 \end{eqnarray*}$$
 as required.
+<p></p>
+[Thanks to Avigyan for pointing out a minor typo.]
 <b><i>[QED]</i></b>
 </p>
 
