--- a/prob1_2025/distrib2.html
+++ b/prob1_2025/distrib2.html
@@ -1308,7 +1308,8 @@ $$
 href="javascript:hideShow('lab31')"><b>[Hint]</b></a><div
 class="ans" id="lab31">For the first inequality use the fact that $\log(1+x) &lt; x$  for $|x| &lt; 1$.
 <p></p>
-For the second use the fact that $\log(1+x) &gt; x-\frac{x^2}{2}$  for $|x| &lt; 1$.
+For the second use the fact that $\log(1+x) &gt; x-\frac{x^2}{2}$  for $|x| &lt; 1$. You may also proceed using just $e^x &gt; 1+ x$ 
+ for $x &gt;0$.
 </div></p>
 
 <hr>
