--- a/prob1_2025/distrib2.html
+++ b/prob1_2025/distrib2.html
@@ -858,7 +858,7 @@ $$
 A box has 100 items, each of which either passes a quality control test
 (OK) or fails the test (BAD). If a box has more than 3 BAD items, then the
 box is rejected by the quality control inspector. It is known that each
-item is OK with probability 0.01, and that the items are independent. Use
+item is BAD with probability 0.01, and that the items are independent. Use
 Poisson approximation to compute the probability that a box is not
 rejected.
 <p><a
