--- a/prob1_2025/condl.html
+++ b/prob1_2025/condl.html
@@ -698,7 +698,7 @@ Direct computation shows $n\geq 4.$
 ::<p>
 <b>EXERCISE 12:</b>&nbsp;(Medium) <font size="-2">[condist10.png]</font><img width="" src="image/condist10.png" style="vertical-align:text-top;">
 <p></p>
-Imagine this set up: A coin with $P(H)=p$  is repeadly tossed. Success means $H.$
+Imagine this set up: A coin with $P(H)=p$  is repeatedly tossed. Success means $H.$
 <p><a
 href="javascript:hideShow('lab12')"><b>[Hint]</b></a><div
 class="ans" id="lab12">
@@ -718,7 +718,7 @@ This is a continuation of the last problem.
 <p><a
 href="javascript:hideShow('lab13')"><b>[Hint]</b></a><div
 class="ans" id="lab13">
-$P(T_1=x|N_n=1) = \frac{P(T_1=x\&amp; N_n=1)}{P(N_n=1)} = \frac{p(1-p)^{n-1}}{np(1-p)^{n-1}}] = \frac 1n.$
+$P(T_1=x|N_n=1) = \frac{P(T_1=x\&amp; N_n=1)}{P(N_n=1)} = \frac{p(1-p)^{n-1}}{np(1-p)^{n-1}} = \frac 1n.$
 </div></p>
 
 <hr>
