--- a/prob1_2025/fluc.html
+++ b/prob1_2025/fluc.html
@@ -996,20 +996,15 @@ class="ans" id="lab14">
 ::<p>
 <b>EXERCISE 18:</b>&nbsp;(Hard) Show that if $a&gt; c&gt; 0$  and $b&gt;0$, then  the number of paths from (0,0) to $(n,c)$
   that attain height $a$  and <i>then</i>  attain height $-b$  before finishing at $(n,c),$  is $N_{n,2a+2b+c}.$ 
- The paths may have also attained height $-b$  before attaining height  $a.$
+If the path is at $X_t$  at time $t$  for $t\in\{0,...,n\},$  then we are talking about the set of all those
+ paths for which $\exists t_1 &lt; t_2 ~~X_{t_1} = a~~X_{t_2}=-b.$  
 <p><a
 href="javascript:hideShow('lab15')"><b>[Hint]</b></a><div
 class="ans" id="lab15">
-<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/drefl.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
+Consider any such path. Let $t_1$  be the first time it hits $a.$  Reflect the path from time $t_1$  to $n$ 
+ wrt the horizontal line through $a.$  This gives a path that is bound to hit $2a+b$ and
+ end at $2a-c.$  Let $t_2$  be the first time it hits $2a+b.$  Reflect the path
+ again from $t_2$  to $n$  wrt the horizontal line through $2a+b.$  This gives a path that ends at $(n,2a+2b+c).$ 
 </div></p> 
 </p>
 ::<p>
