--- a/prob1_2025/exp.html
+++ b/prob1_2025/exp.html
@@ -1174,13 +1174,13 @@ Here $P(X=k) = \binom{k-1}{r-1}p^rq^{k-r}$  for $k=r,r+1,...$  where $q = 1-p.$
 <p></p>
 So 
 $$E\left(\frac rX\right) = \sum_{k=r}^\infty \binom{k-1}{r-1}p^rq^{k-r}\frac rk.$$
-Ignoring the  terms free of $k$, and massaging the rest a little, the sum  reduces to 
-$$\sum_{k=0}^\infty \frac{k(k-1)\cdots(k-r+2)}{k+1} q^k.$$
 This may be handled by repeated term by term integration and differentiation of the power series
 $$1+q+q^2+\cdots = \frac{1}{1-q}$$
 for $|q|&lt;1.$
 <p></p>
-You may like to deal with the $r=1$  case first.
+For example, if $r=1$, then the sum is 
+$$p\sum_{k=1}^\infty \frac{q^{k-1}}{k}  = \frac pq\sum_1^\infty \frac{q^k}{k} = \frac pq\sum_1^\infty \int_0^q t^{k-1}\, dt =
+\frac pq\int_0^q \sum_1^\infty  t^{k-1}\, dt =\frac pq\int_0^q \frac{dt}{1-t} = \cdots. $$
 </div></p>
 
 </p>
