--- a/prob2_2026/contabs.html
+++ b/prob2_2026/contabs.html
@@ -148,7 +148,7 @@ function myFunction() {
 <script src="../tools/rglWebGL.js"></script>
 </head><body>
 <div class="sticky" id="topholder"> </div>
-<a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
+<a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
 <h3>Distributions with density</h3>
 <ul>
 <li>
@@ -225,7 +225,8 @@ function myFunction() {
 </li>
 </ul>
 <hr/>
-<title>Distributions with density</title>
+
+<title xmlns="">Distributions with density</title>
 
 <h1><a
 name="The concept of density">The concept of density</a></h1>
@@ -360,7 +361,7 @@ name="Problem set 2">Problem set 2</a></h2>
 <p></p>
 
 <p>
-<b>EXERCISE 9:</b>&nbsp;Is $f(x) = \frac{1}{\pi(1+x^2}$  a density?</p>
+<b>EXERCISE 9:</b>&nbsp;Is $f(x) = \frac{1}{\pi(1+x^2)}$  a density?</p>
 
 <p></p>
 
@@ -1088,7 +1089,7 @@ name="Problem set 11">Problem set 11</a></h2>
 <b>EXERCISE 63:</b>&nbsp;<font size="-2">[rosspdf36.png]</font><img width="" src="image/rosspdf36.png" style="vertical-align:text-top;"></p>
 
 <p></p>
-<hr/>
+<hr xmlns="http://www.w3.org/1999/xhtml"/>
 <table width="100%" border="0">
 <tr>
 <td align="left"/>
