--- a/prob2_2026/index.html
+++ b/prob2_2026/index.html
@@ -155,7 +155,7 @@ function myFunction() {
 <a href="#Probability II (B1, 2026)">Probability II (B1, 2026)</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Assignment and projects">Assignment and projects</a>
+<a href="#Marks distribution">Marks distribution</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Class notes">Class notes</a>
@@ -169,14 +169,15 @@ function myFunction() {
 <h1 xmlns=""><a
 name="Probability II (B1, 2026)">Probability II (B1, 2026)</a></h1>
 URL: https://arnabc74.github.io/prob2_2026/
+
 <h2><a
-name="Assignment and projects">Assignment and projects</a></h2>
-You need to submit solution to the <a href="hw.html">assigned problems</a>  before the study leave starts. The assignment
- carries 10 marks. You must submit the solutions as handwritten hard copies. No pdf, doc, scans
- sent via email/github will be accepted.
-<p></p>
-The <a href="projects.html">projects</a>  are optional and carry no marks.
-<p></p>
+name="Marks distribution">Marks distribution</a></h2>
+
+<ul>
+<li>Midsem: 30</li>
+<li>Assignment: 20</li>
+<li>End sem: 50</li>
+</ul>
 
 <h2><a
 name="Class notes">Class notes</a></h2>
