--- a/prob2_2026/contabs.html
+++ b/prob2_2026/contabs.html
@@ -507,11 +507,12 @@ This $f$  must be a PDF for our CDF. For most applications, $F$  will fail to be
  many points.
 <p></p>
 For this technique to work $F$  must actually have a density. Otherwise, the
- $f(x)$  obtained by this procedure will not be a density. 
+function  $f(x)$  obtained by this procedure will not be a density. 
 For example, for a
  discrete distribution, the CDF is a step function, and so the above prescription would lead to $f(x)\equiv 0.$
 <p></p>
-If you are given a CDF $F$, and you do not know if it has a density, then you should stll define $f$  as above,
+
+<img src="image/alert.png">If you are given a CDF $F$, and you do not know if it has a density, then you could still define $f$  as above,
  and actually check if $\forall x\in{\mathbb R}~~F(x) = \int_{-\infty}^x f(t)\, dt.$  
 <p></p>
 
@@ -656,7 +657,7 @@ State true or false: if $f(x)$  is a density, and $g(x)$  is obtained by changin
 </ul>
   Let $f,g$  be two densities
  for the same distribution. If $f$  "sits on"an interval  $I$  and $g$  "sits on"
- an interval $J$, then show that the closure if $I$  and $J$   must match. (This closure is called the
+ an interval $J$, then show that the closures of $I$  and $J$   must match. (This closure is called the
 <b><font color="red" size="40">support</font></b>  of the distribution).
   </p>
 
