--- a/prob2_2026/contabs.html
+++ b/prob2_2026/contabs.html
@@ -860,7 +860,8 @@ The following theorem is also of a familiar form:
 <legend><b><i>Theorem</i></b></legend>
 Let $X$  be a random variable with density $f.$  Let $h:{\mathbb R}\rightarrow{\mathbb R}$  be a any function such that $h(X)$ 
  is  a random variable. Then $E(h(X))=\int_{-\infty}^\infty h(x) f(x)\, dx$  if $\int_{-\infty}^\infty |h(x) f(x)|\, dx &lt; \infty.$ 
- If $\int_{-\infty}^\infty |h(x) f(x)|\, dx = \infty,$  then $E(h(X))$  does not exist.
+ If $\int_{-\infty}^\infty |h(x) f(x)|\, dx = \infty,$  then $E(h(X))$  does not exist finitely (may be $\infty$ 
+ or $-\infty$  or non-existent).
 </fieldset>
 While we shall not prove this here, you should be aware of one subtle implication. Suppose that
  $X$  has density $f$  and we are trying to find $E(X^2).$  Then here are two ways of proceeding:
