--- a/prob2_2026/contabs.html
+++ b/prob2_2026/contabs.html
@@ -909,7 +909,8 @@ We pick one element at random and follow it until it dies.  Let $X$  be the age 
 If a non-negative $X$  has density $f$  and CDF $F,$  then its its <b><font color="red" size="40">hazard rate</font></b>  at time $t\leq 0$ 
  is 
 $$h(t) = \frac{f(t)}{1-F(t)},$$
-when $F(t) &lt; 1.$
+when $F(t) &lt; 1.$  Here we are assuming that $f$  is continuous at all values of $t$  where we are computing
+ the hazard rate.
 </fieldset>
 We can think of it as 
 $$\lim_{\delta t\rightarrow 0+} \frac{P(X\leq t+\delta t | X &gt; t)}{\delta t} =\lim_{\delta t\rightarrow 0+} \frac{P(X\in
