--- a/prob2_2026/cjoint.html
+++ b/prob2_2026/cjoint.html
@@ -148,7 +148,7 @@ function myFunction() {
 <script src="../tools/rglWebGL.js"></script>
 </head><body>
 <div class="sticky" id="topholder"> </div>
-<a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
+<a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
 <h3>Joint distribution</h3>
 <ul>
 <li>
@@ -295,7 +295,7 @@ function myFunction() {
 </ul>
 <hr/>
 $\newcommand{\v}[1]{{\mathbf #1}}$
-<title>Joint distribution</title>
+<title xmlns="">Joint distribution</title>
 
 <h1><a
 name="Quick primer on multivariate calculus (part 1)">Quick primer on multivariate calculus (part 1)</a></h1>
@@ -315,10 +315,27 @@ When we
 name="Continuity">Continuity</a></h2>
 For  $f:{\mathbb R}\rightarrow{\mathbb R}$  continuity means its graph has no break. Similarly, $f:{\mathbb R}^2\rightarrow{\mathbb R}$  is called continuous,
  when its graph is an unbroken surface, no hole, cut or gap. More rigourously, you can think of 
- continuity in terms limits:
-<p></p>
- $f:{\mathbb R}^2\rightarrow{\mathbb R}$  is continuous at $\v a$  means, whenever $\v x\rightarrow \v a$ 
- we have $f(\v x)\rightarrow f(\v a).$  
+ continuity in terms of the $\epsilon$-$\delta$  definition, much as in real analysis. In real analysis we say
+ that a function $f:{\mathbb R}\rightarrow{\mathbb R}$  is continuous at some $a\in{\mathbb R}$  if 
+$$\forall \epsilon&gt;0~~\exists \delta&gt;0~~\forall x\in N_1(a,\delta)~~f(x)\in N_1(f(a),\epsilon).$$
+Here we have used the neighbourhood notation $N_1(a,r)$  to mean 
+$$N_1(c,r):=\{x\in{\mathbb R}~:~|x-c|&lt;r\}.$$
+Now the natural way to measure distance between two points $x,y\in{\mathbb R}$  is $|x-y|.$  But if we want to find the
+ distance between two points $\v x = (x_1,x_2), \v y = (y_1,y_2)\in{\mathbb R}^2,$  then the natural way is 
+$$d(\v x, \v y) = \sqrt{(x_1-y_1)^2+(x_2-y_2)^2}.$$
+So we should update the definition of neighbourhood in ${\mathbb R}^2$  accordingly:
+$$N_2(\v c,r):=\{\v x\in{\mathbb R}^2~:~f(\v x,\v c)&lt;r\}.$$
+Pictorially, this is the disc (without the circumference) of radius $r$  centred at $\v c.$  If we plug $N_2(\cdot, \cdot)$ 
+ in place of $N_1(\cdot, \cdot)$  approparitely in the definition of continuity from real analysis, we shall get the
+ following definition:
+<fieldset>
+<legend><b>Definition: Continuity</b></legend>
+A function $f:{\mathbb R}^2\rightarrow{\mathbb R}$  is called <b><font color="red" size="40">continuous</font></b>  at some $\v a\in{\mathbb R}^2$  if
+$$\forall \epsilon&gt;0~~\exists \delta&gt;0 ~~\forall \v x\in N_2(\v a, \delta)~~f(\v x)\in N_1(f(\v a),\epsilon).$$
+</fieldset>
+Since the codomain is still ${\mathbb R},$  we are using subscript 1 in  $N_1(f(\v a),\epsilon).$  
+If our function was $f:{\mathbb R}^2\rightarrow{\mathbb R}^2,$  then we would have used $N_2(f(\v a),\epsilon).$  
+By the way, we can similarly define continuity of any $f:{\mathbb R}^m\rightarrow{\mathbb R}^n.$  
 <p></p>
 
 <h2><a
@@ -2053,7 +2070,7 @@ I think this problem should better be attacked after learning about order statis
 <b>EXERCISE 81:</b>&nbsp;<font size="-2">[rossipmjoint12.png]</font><img width="" src="image/rossipmjoint12.png" style="vertical-align:text-top;"></p>
 ::<p>
 <b>EXERCISE 82:</b>&nbsp;<font size="-2">[rossipmjoint13.png]</font><img width="" src="image/rossipmjoint13.png" style="vertical-align:text-top;"></p>
-<hr/>
+<hr xmlns="http://www.w3.org/1999/xhtml"/>
 <table width="100%" border="0">
 <tr>
 <td align="left"/>
