--- a/prob2_2026/cjoint.html
+++ b/prob2_2026/cjoint.html
@@ -621,7 +621,7 @@ This should also lead to the same answer (check!).
 name="Problem set 4">Problem set 4</a></h2>
 
 <p>
-<b>EXERCISE 11:</b>&nbsp;Let $(X,Y)$  have joint density $f(x)=\left\{\begin{array}{ll}cxy&\text{if }x,y\in[0,1],\,x\leq y\\
+<b>EXERCISE 11:</b>&nbsp;Let $(X,Y)$  have joint density $f(x,y)=\left\{\begin{array}{ll}cxy&\text{if }x,y\in[0,1],\,x\leq y\\
  0&\text{otherwise.}\end{array}\right..$  Find $P(Y&lt; \sqrt{X}).$</p>
 
 <p></p>
@@ -1251,7 +1251,7 @@ We already know the following general definition of  jointly distributed random 
 <legend><b>Definition: Independence</b></legend>
 Let $X_1,...,X_n$  be jointly distributed random variables. We say they are <b><font color="red" size="40">(mutually) independent</font></b>  if
  for all $\{i_1,...,i_k\}\subseteq \{1,...,n\}$  and any $B_1,...,B_k\subseteq{\mathbb R}$  we have
-$$P(X_{i_1}\in B_1, ..., X_{i_k}\in B_k) = P(X_{i_1}\in B_1)\times\cdotsP( X_{i_k}\in B_k).$$
+$$P(X_{i_1}\in B_1, ..., X_{i_k}\in B_k) = P(X_{i_1}\in B_1)\times\cdots P( X_{i_k}\in B_k).$$
 </fieldset> 
 Incidentally, it is not enough to have $P(X_i\in B_i, X_j\in B_j) = P(X_i\in B_i)P( X_j\in B_j)$  for all $i\neq j.$ 
  If only this holds, then we call $X_1,...,X_n$  only <b><font color="red" size="40">pairwise independent</font></b>, which is weaker than mutual
