--- a/prob2_2026/cjoint.html
+++ b/prob2_2026/cjoint.html
@@ -1077,7 +1077,23 @@ Find it and fill in the cells below with appropriate formulae for $F(x,y).$  One
 </table>
 </center>
  Is it continuous everywhere? What is
- $P(X=a,\,Y=b)$  for any given $(a,b)?$</p>
+ $P(X=a,\,Y=b)$  for any given $(a,b)?$
+<p><a
+href="javascript:hideShow('lab3')"><b>[Hint]</b></a><div
+class="ans" id="lab3">
+<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/contcex.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+</div></p>
+
+</p>
 
 <p></p>
 Univariate CDFs are nondecreasing functions, and hence can have only countably many discontinuities.
@@ -1495,8 +1511,8 @@ Let $X$  be a random variable with this PMF. Let $Y = X.$  Show that $E(X), E(Y)
 <p>
 <b>EXERCISE 44:</b>&nbsp;Play with the last exercise to come up with a counterexample where $E(X), E(Y)$  are
  both fnite, but $E(XY)$  does not exist.<p><a
-href="javascript:hideShow('lab3')"><b>[Hint]</b></a><div
-class="ans" id="lab3">
+href="javascript:hideShow('lab4')"><b>[Hint]</b></a><div
+class="ans" id="lab4">
 Let $X$  take value $(-1)^n n$  with probability $\frac{1}{cn^3}$  where $c = \sum \frac{1}{n^3} &lt; \infty.$ 
  Take $Y = |X|.$
 </div></p>
